--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -11,9 +14,9 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
-      <img class="image-qr-code" src="images/image-qr-code.png" alt="image-qr-code">
+      <img class="image-qr-code" src="images/image-qr-code.png" alt="qr code image to frontendmentor.io">
       <div class="text" >
         <h2>Improve your front-end skills by building projects</h2>
 
@@ -24,7 +27,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/JJunior-Dev">JJunior-Dev</a>.
     </div>
-  </div>
+  </main>
   
 </body>
 </html>
