--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +11,27 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsive.css">
-  
+
   <title>Frontend Mentor | QR code component</title>
 </head>
+
 <body>
   <main class="container">
     <div class="card">
       <img class="image-qr-code" src="images/image-qr-code.png" alt="qr code image to frontendmentor.io">
-      <div class="text" >
+      <div class="text">
         <h1>Improve your front-end skills by building projects</h1>
 
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io/challenges"
+        target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/JJunior-Dev">JJunior-Dev</a>.
     </div>
   </main>
-  
+
 </body>
+
 </html>
